--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -22,36 +22,27 @@ body {
 	padding: 2vw 10% 0 10%;
 	width: 80%;
 	max-width: 80%;
-	background-color: #1c1c1c;
 	text-align: right;
 }
 
 .drop-button {
 	border: none;
 	outline: none;
-	color: white;
-	background-color: #1c1c1c;
 	margin: 0;
 	padding-bottom: 2vw;
-}
-
-.drop-button:focus {
-	color: grey;
 }
 
 .dropdown-content {
 	display: none;
 	position: relative;
-	background-color: #f9f9f9;
 	width: 100%;
 	max-width: 100%;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	/*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
 	z-index: 1;
 }
 
 .dropdown-content a {
 	float: none;
-	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
